Fix footer spacing

--- a/sass/components/_site-footer.scss
+++ b/sass/components/_site-footer.scss
@@ -1,5 +1,4 @@
 .site-footer {
+    @include container();
     border-top: $sm-thin-line solid #000;
-    padding-left: $sm-fat-line;
-    padding-right: $sm-fat-line;
 }
